--- a/index.html
+++ b/index.html
@@ -386,9 +386,156 @@
         </div>
       </div>
     </div>
-    <div class="team">
-      <div class="main-head" id="team">
+    <div class="team" id="team">
+      <div class="main-head">
         <h1>Team members</h1>
+      </div>
+      <div class="container">
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-01.jpg" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-02.jpg" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-03.jpg" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-04.jpg" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-05.png" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-06.png" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-07.jpg" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <div class="member-info">
+            <div>
+              <img src="imgs/team-08.jpg" alt="" />
+            </div>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="brief">
+            <h2>name</h2>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="services" id="services">
+      <div class="main-head">
+        <h1>services</h1>
       </div>
     </div>
   </body>
