--- a/index.html
+++ b/index.html
@@ -537,6 +537,72 @@
       <div class="main-head">
         <h1>services</h1>
       </div>
+      <div class="container">
+        <div class="ser">
+          <div class="icon">
+            <i class="fa-solid fa-user-shield"></i>
+            <h3>security</h3>
+          </div>
+          <div class="text">
+            <div class="num"></div>
+            <a href="#">details</a>
+          </div>
+        </div>
+        <div class="ser">
+          <div class="icon">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <h3>Fixing Issues</h3>
+          </div>
+          <div class="text">
+            <div class="num"></div>
+            <a href="#">details</a>
+          </div>
+        </div>
+
+        <div class="ser">
+          <div class="icon">
+            <i class="fa-solid fa-map-location-dot"></i>
+            <h3>Location</h3>
+          </div>
+          <div class="text">
+            <div class="num"></div>
+            <a href="#">details</a>
+          </div>
+        </div>
+
+        <div class="ser">
+          <div class="icon">
+            <i class="fa-solid fa-laptop-code"></i>
+            <h3>Coding</h3>
+          </div>
+          <div class="text">
+            <div class="num"></div>
+            <a href="#">details</a>
+          </div>
+        </div>
+
+        <div class="ser">
+          <div class="icon">
+            <i class="fa-solid fa-palette"></i>
+            <h3>design</h3>
+          </div>
+          <div class="text">
+            <div class="num"></div>
+            <a href="#">details</a>
+          </div>
+        </div>
+
+        <div class="ser">
+          <div class="icon">
+            <i class="fa-solid fa-bullhorn"></i>
+            <h3>Marketing</h3>
+          </div>
+          <div class="text">
+            <div class="num"></div>
+            <a href="#">details</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
