--- a/index.html
+++ b/index.html
@@ -604,5 +604,124 @@
         </div>
       </div>
     </div>
+    <div class="skills" id="our-skills">
+      <div class="main-head">
+        <h1>our skills</h1>
+      </div>
+      <div class="container">
+        <div class="img">
+          <img src="imgs/skills.png" alt="" />
+        </div>
+        <div class="skill-prog">
+          <div class="skill">
+            <h3>html</h3>
+            <span>80%</span>
+            <p><span style="width: 80%"></span></p>
+          </div>
+
+          <div class="skill">
+            <h3>css</h3>
+            <span>85%</span>
+            <p><span style="width: 85%"></span></p>
+          </div>
+
+          <div class="skill">
+            <h3>JavaScript</h3>
+            <span>70%</span>
+            <p><span style="width: 70%"></span></p>
+          </div>
+
+          <div class="skill">
+            <h3>python</h3>
+            <span>80%</span>
+            <p><span style="width: 80%"></span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="works" id="how-it-works">
+      <div class="main-head">
+        <h1>how it works</h1>
+      </div>
+      <div class="container">
+        <div class="img">
+          <img src="imgs/work-steps.png" alt="" />
+        </div>
+        <div class="steps">
+          <div class="step">
+            <img src="imgs/work-steps-1.png" alt="" />
+            <div class="info">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+
+          <div class="step">
+            <img src="imgs/work-steps-2.png" alt="" />
+            <div class="info">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+
+          <div class="step">
+            <img src="imgs/work-steps-3.png" alt="" />
+            <div class="info">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="events" id="event">
+      <div class="main-head">
+        <h1>latest events</h1>
+      </div>
+      <div class="container">
+        <img src="imgs/events.png" alt="" />
+        <div class="info">
+          <div class="timer">
+            <div>
+              <p>0-258</p>
+              <p>days</p>
+            </div>
+            <div>
+              <p>0-24</p>
+              <p>hours</p>
+            </div>
+            <div>
+              <p>0-44</p>
+              <p>minutes</p>
+            </div>
+            <div>
+              <p>0-21</p>
+              <p>seconds</p>
+            </div>
+          </div>
+          <h1>Tech Masters Event 2021</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero
+            tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi
+            nulla in harum, veritatis porro
+          </p>
+        </div>
+        <div class="sub">
+          <form>
+            <input type="email" placeholder="enter your email" />
+            <input type="submit" value="subscribe" />
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
