--- a/index.html
+++ b/index.html
@@ -723,5 +723,212 @@
         </div>
       </div>
     </div>
+    <div class="pricing" id="pricing">
+      <div class="main-head">
+        <h1>pricing plans</h1>
+      </div>
+      <div class="container">
+        <div class="plan">
+          <div class="head">
+            <h2>basic</h2>
+            <img src="imgs/hosting-basic.png" alt="" />
+            <span>$15</span>
+            <p>per month</p>
+          </div>
+          <ul>
+            <li>10GB HDD Space</li>
+            <li>5 Email Addresses</li>
+            <li>2 Subdomains</li>
+            <li>4 Databases</li>
+            <li>Basic Support</li>
+          </ul>
+          <a href="#">Choose plan</a>
+        </div>
+
+        <div class="plan popular">
+          <span class="pop">most popular</span>
+          <div class="head">
+            <h2>Advanced</h2>
+            <img src="imgs/hosting-advanced.png" alt="" />
+            <span>$25</span>
+            <p>per month</p>
+          </div>
+          <ul>
+            <li>20GB HDD Space</li>
+            <li>10 Email Addresses</li>
+            <li>5 Subdomains</li>
+            <li>8 Databases</li>
+            <li>Advanced Support</li>
+          </ul>
+          <a href="#">Choose plan</a>
+        </div>
+
+        <div class="plan">
+          <div class="head">
+            <h2>Professional</h2>
+            <img src="imgs/hosting-professional.png" alt="" />
+            <span>$45</span>
+            <p>per month</p>
+          </div>
+          <ul>
+            <li>50GB HDD Space</li>
+            <li>20 Email Addresses</li>
+            <li>10 Subdomains</li>
+            <li>20 Databases</li>
+            <li>Professional Support</li>
+          </ul>
+          <a href="#">Choose plan</a>
+        </div>
+      </div>
+    </div>
+    <div class="top" id="top">
+      <div class="main-head">
+        <h1>top videos</h1>
+      </div>
+      <div class="container">
+        <div class="list">
+          <div class="top-videos">
+            <span>top videos</span>
+            <i class="fa-solid fa-shuffle"></i>
+          </div>
+          <div class="video">
+            <p>How To Create Sub Domain</p>
+            <span>05:18</span>
+          </div>
+          <div class="video">
+            <p>Playing With The DNS</p>
+            <span>03:18</span>
+          </div>
+          <div class="video">
+            <p>Everything About The Virtual Hosts</p>
+            <span>05:25</span>
+          </div>
+          <div class="video">
+            <p>How To Monitor Your Website</p>
+            <span>04:16</span>
+          </div>
+          <div class="video">
+            <p>Uncharted Beating The Last Boss</p>
+            <span>07:48</span>
+          </div>
+          <div class="video">
+            <p>Ys Oath In Felghana Overview</p>
+            <span>03:12</span>
+          </div>
+          <div class="video">
+            <p>Ys Series All Games Ending</p>
+            <span>08:10</span>
+          </div>
+        </div>
+        <div class="watch">
+          <img src="imgs/video-preview.jpg" alt="" />
+          <p>Everything About The Virtual Hosts</p>
+        </div>
+      </div>
+    </div>
+    <div class="stats" id="stats">
+      <h1>Our Awesome Stats</h1>
+      <div class="container">
+        <div class="stat">
+          <i class="fa-regular fa-user"></i>
+          <p>150</p>
+          <span>Clients</span>
+        </div>
+        <div class="stat">
+          <i class="fa-solid fa-code"></i>
+          <p>135</p>
+          <span>Projects</span>
+        </div>
+        <div class="stat">
+          <i class="fa-solid fa-earth-asia"></i>
+          <p>50</p>
+          <span>Countries</span>
+        </div>
+        <div class="stat">
+          <i class="fa-solid fa-money-bill-1"></i>
+          <p>500</p>
+          <span>Money</span>
+        </div>
+      </div>
+    </div>
+    <div class="discount" id="request">
+      <div class="info">
+        <div>
+          <h1>We Have A Discount</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+            asperiores consectetur, recusandae ratione provident necessitatibus,
+            cumque delectus commodi fuga praesentium beatae. Totam vel similique
+            laborum dicta aperiam odit doloribus corporis.
+          </p>
+          <img src="imgs/discount.png" alt="" />
+        </div>
+      </div>
+      <form>
+        <h1>request a discount</h1>
+        <input type="text" placeholder="your name" />
+        <input type="email" placeholder="your email" /><input
+          type="tel"
+          placeholder="your phone"
+        />
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="tell us about your needs"
+        ></textarea>
+        <input type="submit" value="send" />
+      </form>
+    </div>
+    <footer>
+      <main class="container">
+        <div>
+          <h1>elzero</h1>
+          <section class="icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </section>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus
+            nulla rem, dignissimos iste aspernatur
+          </p>
+        </div>
+        <div class="important">
+          <a href="#">Important Link 1</a>
+          <a href="#">Important Link 2</a>
+          <a href="#">Important Link 3</a>
+          <a href="#">Important Link 4</a>
+          <a href="#">Important Link 5</a>
+        </div>
+        <div class="contact">
+          <div>
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Egypt, Giza, Inside The Sphinx, Room Number 220</p>
+          </div>
+          <div>
+            <i class="fa-regular fa-clock"></i>
+            <p>Business Hours: From 10:00 To 18:00</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-phone"></i>
+            <div>
+              <p>+20123456789</p>
+              <p>+20198765432</p>
+            </div>
+          </div>
+        </div>
+        <div class="grid">
+          <img src="imgs/gallery-01.png" alt="" />
+          <img src="imgs/gallery-02.png" alt="" />
+          <img src="imgs/gallery-03.jpg" alt="" />
+          <img src="imgs/gallery-04.png" alt="" />
+          <img src="imgs/gallery-05.jpg" alt="" />
+          <img src="imgs/gallery-06.png" alt="" />
+        </div>
+      </main>
+      <div>Made With &lt;3 By Elzero</div>
+    </footer>
   </body>
 </html>
