--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
     <footer>
       <main class="container">
         <div>
-          <h1>elzero</h1>
+          <h1>SASA</h1>
           <section class="icons">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
@@ -905,7 +905,7 @@
         <div class="contact">
           <div>
             <i class="fa-solid fa-location-dot"></i>
-            <p>Egypt, Giza, Inside The Sphinx, Room Number 220</p>
+            <p>Egypt, beni suef, elgazira, AL Bosah</p>
           </div>
           <div>
             <i class="fa-regular fa-clock"></i>
@@ -914,7 +914,7 @@
           <div>
             <i class="fa-solid fa-phone"></i>
             <div>
-              <p>+20123456789</p>
+              <p>+201014863835</p>
               <p>+20198765432</p>
             </div>
           </div>
