--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
           <img src="imgs/gallery-06.png" alt="" />
         </div>
       </main>
-      <div>Made With &lt;3 By Elzero</div>
+      <div>Made With &lt;3 By Mostafa Hassan</div>
     </footer>
   </body>
 </html>
