--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Third template" />
     <script
       src="https://kit.fontawesome.com/b9ad9e1697.js"
       crossorigin="anonymous"
