--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
   </head>
   <body>
+    <span class="scroll-prog"></span>
     <header>
       <div class="container">
         <div class="logo"><a href="#">elzero</a></div>
@@ -617,25 +618,25 @@
           <div class="skill">
             <h3>html</h3>
             <span>80%</span>
-            <p><span style="width: 80%"></span></p>
+            <p><span class="prog" data-width="80%"></span></p>
           </div>
 
           <div class="skill">
             <h3>css</h3>
             <span>85%</span>
-            <p><span style="width: 85%"></span></p>
+            <p><span class="prog" data-width="85%"></span></p>
           </div>
 
           <div class="skill">
             <h3>JavaScript</h3>
             <span>70%</span>
-            <p><span style="width: 70%"></span></p>
+            <p><span class="prog" data-width="70%"></span></p>
           </div>
 
           <div class="skill">
             <h3>python</h3>
             <span>80%</span>
-            <p><span style="width: 80%"></span></p>
+            <p><span class="prog" data-width="80%"></span></p>
           </div>
         </div>
       </div>
@@ -832,22 +833,22 @@
       <div class="container">
         <div class="stat">
           <i class="fa-regular fa-user"></i>
-          <p>150</p>
+          <p data-count="150">0</p>
           <span>Clients</span>
         </div>
         <div class="stat">
           <i class="fa-solid fa-code"></i>
-          <p>135</p>
+          <p data-count="135">0</p>
           <span>Projects</span>
         </div>
         <div class="stat">
           <i class="fa-solid fa-earth-asia"></i>
-          <p>50</p>
+          <p data-count="50">0</p>
           <span>Countries</span>
         </div>
         <div class="stat">
           <i class="fa-solid fa-money-bill-1"></i>
-          <p>500</p>
+          <p data-count="500">0</p>
           <span>Money</span>
         </div>
       </div>
@@ -932,4 +933,5 @@
       <div>Made With &lt;3 By Mostafa Hassan</div>
     </footer>
   </body>
+  <script src="./js/main.js"></script>
 </html>
